# sudo-ad-tracker-blocker-js

./: .eslintrc.js  .gitignore  .npmrc  .prettierignore  Cargo.toml  README.md  babel.config.json  codegen.yml  jest.config.json  jest.system.config.json  package.json  tsconfig.declarations.json  tsconfig.json
docs/: globals.html  index.html  modules.html
docs/assets/: highlight.css  search.js
docs/classes/: SudoAdTrackerBlockerClient.html  sudoadtrackerblockerclient.html
docs/enums/: CheckUrlResult.html  RulesetFormat.html  RulesetType.html  Status.html  checkurlresult.html  rulesetformat.html  rulesettype.html  status.html
docs/functions/: initWasm.html
docs/interfaces/: FilterException.html  Ruleset.html  RulesetContent.html  RulesetMetaData.html  RulesetProvider.html  StorageProvider.html  SudoAdTrackerBlockerClientProps.html  config.html  filterexception.html  ruleset.html  storageprovider.html  sudoadtrackerblockerclientprops.html
docs/modules/: Entitlements.html  entitlements.html
docs/types/: Config.html  WasmInitInput.html
docs/variables/: Entitlements.userEntitled.html  IotsConfig.html
scripts/: build-filter-engine.sh
src/: ad-tracker-blocker-client.spec.ts  ad-tracker-blocker-client.ts  config.ts  entitlements.spec.ts  entitlements.ts  errors.ts  filter-exceptions.spec.ts  filter-exceptions.ts  index.ts  lib.rs  ruleset-provider.ts  ruleset-type.ts  storage-provider.ts  sudo-ad-tracker-blocker-client.spec.ts  sudo-ad-tracker-blocker-client.ts  wasm.ts
tests/: setup-system-tests.ts  setup-unit-tests.ts
utils/: require-env.ts
(+15 files in other folders)
