[package]
name = "filter-engine"
description = "Filter Engine for ATB SDK"
version = "0.1.0"
categories = ["wasm"]
readme = "README.md"
edition = "2018"
repository = "git@gitlab.tools.anonyome.com:platform/ad-tracker-blocker/ad-tracker-blocker-js.git"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "^ 0.2"
adblock = "0.3.3"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.22"
features = ["console"]
